fix: page tags not showing on page view in iOS
fixed https://github.com/logseq/db-test/issues/399

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -542,7 +542,7 @@
 }
 
 @container (max-width: 600px) {
-    .time-spent, .positioned-properties.block-right, .view-actions, .ls-page-title .block-tags {
+    .time-spent, .positioned-properties.block-right, .view-actions {
         display: none;
     }
 
